tests/should-fail/rawcodes/rawcodelit-11.j
globals
    integer o = 'a\\b'
endglobals